Fixed Alignment issues

--- a/media-queries.css
+++ b/media-queries.css
@@ -13,7 +13,7 @@
 }
 
 @media (min-width: 992px) {
-  .header {
+  /* .header {
     padding: 1em 6em;
-  }
+  } */
 }
