--- a/style.css
+++ b/style.css
@@ -20,19 +20,15 @@ p {
 }
 
 /* HEADER */
-.wrapper {
-  padding-right: 0;
-  padding-left: 0;
-
-  /* position: relative; */
-  z-index: 1;
-}
 .header {
   padding: 1em 2em 1em 0;
   -webkit-box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, 0.1);
   -moz-box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, 0.1);
   box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, 0.1);
   background-color: #0c1a7a;
+}
+.navbar {
+  padding: 0.5rem 0;
 }
 .navbar-brand {
   color: #f8f9fa;
@@ -57,12 +53,12 @@ nav ul li a:hover {
   color: #05b993;
 }
 .navbar .menu {
-  border: 1px solid #000;
+  border: 1px solid #fff;
   padding: 10px 16px;
   font-size: 14px;
   text-decoration: none;
   float: right;
-  color: #000;
+  color: #fff;
   font-weight: 500;
   outline: none;
   width: fit-content;
